@@ -8,4 +8,3 @@ order.
 * Support <tt>ask(..., Hash)</tt>.
 * Support <tt>ask(..., File)</tt>.
 * Add readline support for history and editing.
-* Add full column support to choose()
